--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -1,5 +1,5 @@
 .header {
-  width: 63%;
+  width: 100vw;
   background-color: transparent;
   position: fixed;
   padding: 5px 20px;
@@ -8,7 +8,7 @@
   z-index: 100;
   .nav {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     height: var(--header-height);
     &__logo {
